fixed the clipping tags and added the last thing to the buy tab
i just need to put the dec up before the tabs and the page will be semi-done

--- a/src/app_tailwind.css
+++ b/src/app_tailwind.css
@@ -555,9 +555,6 @@ select {
     max-width: 1536px;
   }
 }
-.m-4 {
-  margin: 1rem;
-}
 .mx-16 {
   margin-left: 4rem;
   margin-right: 4rem;
@@ -569,6 +566,14 @@ select {
 .mx-20 {
   margin-left: 5rem;
   margin-right: 5rem;
+}
+.my-14 {
+  margin-top: 3.5rem;
+  margin-bottom: 3.5rem;
+}
+.my-5 {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
 }
 .mx-auto {
   margin-left: auto;
@@ -661,14 +666,23 @@ select {
 .mb-5 {
   margin-bottom: 1.25rem;
 }
+.mr-3 {
+  margin-right: 0.75rem;
+}
 .ml-2 {
   margin-left: 0.5rem;
+}
+.mr-12 {
+  margin-right: 3rem;
 }
 .ml-1 {
   margin-left: 0.25rem;
 }
 .mt-\[0\.10rem\] {
   margin-top: 0.10rem;
+}
+.ml-12 {
+  margin-left: 3rem;
 }
 .mt-24 {
   margin-top: 6rem;
@@ -730,8 +744,8 @@ select {
 .h-80 {
   height: 20rem;
 }
-.h-full {
-  height: 100%;
+.h-36 {
+  height: 9rem;
 }
 .w-96 {
   width: 24rem;
@@ -785,14 +799,26 @@ select {
   width: -moz-fit-content;
   width: fit-content;
 }
+.w-\[44rem\] {
+  width: 44rem;
+}
 .w-40 {
   width: 10rem;
+}
+.w-\[24rem\] {
+  width: 24rem;
 }
 .w-\[30rem\] {
   width: 30rem;
 }
 .w-24 {
   width: 6rem;
+}
+.w-36 {
+  width: 9rem;
+}
+.w-\[23rem\] {
+  width: 23rem;
 }
 .w-\[32rem\] {
   width: 32rem;
@@ -847,8 +873,14 @@ select {
   margin-right: calc(0.75rem * var(--tw-space-x-reverse));
   margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
 }
+.overflow-y-auto {
+  overflow-y: auto;
+}
 .break-words {
   overflow-wrap: break-word;
+}
+.break-all {
+  word-break: break-all;
 }
 .rounded {
   border-radius: 0.25rem;
@@ -929,11 +961,21 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(134 239 172 / var(--tw-bg-opacity));
 }
+.bg-slate-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
+}
+.object-right-top {
+  object-position: right top;
+}
 .p-2 {
   padding: 0.5rem;
 }
 .p-6 {
   padding: 1.5rem;
+}
+.p-3 {
+  padding: 0.75rem;
 }
 .p-4 {
   padding: 1rem;
@@ -1001,12 +1043,6 @@ select {
 }
 .pb-5 {
   padding-bottom: 1.25rem;
-}
-.pt-3 {
-  padding-top: 0.75rem;
-}
-.pb-3 {
-  padding-bottom: 0.75rem;
 }
 .text-center {
   text-align: center;
